--- a/docs/.vitepress/theme/styles/custom.scss
+++ b/docs/.vitepress/theme/styles/custom.scss
@@ -13,6 +13,7 @@ li {
 
 :root {
   /* 激活主题颜色修改 */
+  --vp-c-brand: var(--vp-c-brand-1) !important;
   --vp-c-brand-1: #00C68F !important;
 
   /* 按钮颜色 */
